# spot

./: Cargo.toml  README.md  spot.toml
.github/workflows/: rust.yml
src/: main.rs
