[package]
name = "spot"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = "0.24"
axum = { version = "0.6", features = ["http2"] }
tracing = "0.1"
axum-tracing-opentelemetry = "0.7"
datadog-logs = { version = "0.2", features = ["reqwest", "tokio"] }
log = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.14", features = ["gzip", "json", "deflate", "tokio-util"] }
opentelemetry-datadog = { version = "0.6.0", features = ["reqwest", "reqwest-client"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio", "metrics", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time", "json"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
tower-http = { version = "0.3.5", features = ["tokio", "trace", "metrics", "request-id"] }
anyhow = { version = "1.0.69", features = ["backtrace"] }
vaultrs = "0.6.2"
config = "0.13.3"
